{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 260,
  "lineage": "788a05a7-6b18-d99c-c28f-cac91de70df5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bank-beanstalk-app-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0705b549ddde47006",
            "description": "Security group for beanstalk load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0705b549ddde47006",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "banking-beanstalk-elb-sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_ELB_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_ELB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "banking-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0d22bbc12064f94a3",
            "description": "Security group for the bastion EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d22bbc12064f94a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "javaBank-bastion-sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_Bastion_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_Bastion_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "banking-beanstalk-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0b5316d76e3afc5b8",
            "description": "Security group for beanstalk instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5316d76e3afc5b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d22bbc12064f94a3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "java-beanstalk-instance-sg",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Beanstalk_instance_SG"
            },
            "tags_all": {
              "Name": "Beanstalk_instance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.banking-bastion-sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:network-acl/acl-02e1dfce2945292ea",
            "default_network_acl_id": "acl-02e1dfce2945292ea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02e1dfce2945292ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "137370044763",
            "subnet_ids": [
              "subnet-08d688dc20fe191cb",
              "subnet-0cab6d00562ec5526",
              "subnet-0db6bd40b3d1180e3"
            ],
            "tags": {
              "Name": "banking-vpc-default",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-default",
              "enviroment": "prod",
              "terraform": "true"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:route-table/rtb-0d067f4b4d3cad732",
            "default_route_table_id": "rtb-0d067f4b4d3cad732",
            "id": "rtb-0d067f4b4d3cad732",
            "owner_id": "137370044763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "banking-vpc-default",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-default",
              "enviroment": "prod",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:security-group/sg-0ea119fa22059d92c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ea119fa22059d92c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "137370044763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "banking-vpc-default",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-default",
              "enviroment": "prod",
              "terraform": "true"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:internet-gateway/igw-0453ddab6b6861135",
            "id": "igw-0453ddab6b6861135",
            "owner_id": "137370044763",
            "tags": {
              "Name": "banking-vpc",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc",
              "enviroment": "prod",
              "terraform": "true"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0453ddab6b6861135",
            "id": "r-rtb-0728a9422c0b27aa71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0728a9422c0b27aa7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:route-table/rtb-0728a9422c0b27aa7",
            "id": "rtb-0728a9422c0b27aa7",
            "owner_id": "137370044763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0453ddab6b6861135",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "banking-vpc-public",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public",
              "enviroment": "prod",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8562002e30a10fe",
            "route_table_id": "rtb-0728a9422c0b27aa7",
            "subnet_id": "subnet-0cab6d00562ec5526"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01217dc62aeaa82f1",
            "route_table_id": "rtb-0728a9422c0b27aa7",
            "subnet_id": "subnet-08d688dc20fe191cb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d3b6ed979c78d8",
            "route_table_id": "rtb-0728a9422c0b27aa7",
            "subnet_id": "subnet-0db6bd40b3d1180e3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0cab6d00562ec5526",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cab6d00562ec5526",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-vpc-public-us-east-1a",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public-us-east-1a",
              "enviroment": "prod",
              "terraform": "true"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-08d688dc20fe191cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d688dc20fe191cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-vpc-public-us-east-1b",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public-us-east-1b",
              "enviroment": "prod",
              "terraform": "true"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:subnet/subnet-0db6bd40b3d1180e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db6bd40b3d1180e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137370044763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-vpc-public-us-east-1c",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc-public-us-east-1c",
              "enviroment": "prod",
              "terraform": "true"
            },
            "vpc_id": "vpc-0fd24130a26f3766b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137370044763:vpc/vpc-0fd24130a26f3766b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-02e1dfce2945292ea",
            "default_route_table_id": "rtb-0d067f4b4d3cad732",
            "default_security_group_id": "sg-0ea119fa22059d92c",
            "dhcp_options_id": "dopt-03c9a2e95025c980c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd24130a26f3766b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d067f4b4d3cad732",
            "owner_id": "137370044763",
            "tags": {
              "Name": "banking-vpc",
              "enviroment": "prod",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "banking-vpc",
              "enviroment": "prod",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}